<resources>
    <string name="app_name">Schools guide</string>
    <string name="icon_splash">icon splash</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login_now">Login Now</string>
    <string name="don_t_have_account_yetLabel">Don\'t have account yet ? {Register Now}</string>
    <string name="please_wait">Please wait</string>
    <string name="i_agree_read_the_terms_and_conditions">I agree,{read the terms and conditions}</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="school_cate">Category</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="register">Register</string>
    <string name="i_have_account_login_now">I have account? {Login Now}</string>
    <string name="choose_the_nearest_school_to_you">Choose the nearest school to you!</string>
    <string name="search_map">Search Map</string>
    <string name="advance_search">Advance Search</string>
    <string name="recommended_schools">Recommended Schools</string>
    <string name="view_all">View All</string>
    <string name="featured_schools">Featured Schools</string>
    <string name="_new">New</string>
    <string name="explore_school">Explore School</string>
    <string name="discover_you_perfect_school">Discover You Perfect School</string>
    <string name="profile">Profile</string>
    <string name="new_password">New Password</string>
    <string name="for_your_security_please_enter_old_password">For your security,please enter old password</string>
    <string name="update_password_label">Update password</string>
    <string name="old_password">Old Password</string>
    <string name="done">Done</string>
    <string-array name="gender">

        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="add_school_">Add School</string>
    <string name="send_request_to_add_your_school">Send request to add your school</string>
    <string name="write_details">Write Details</string>
    <string name="send_request">Send Request</string>
    <string name="school_name">School Name</string>
    <string name="school_phone">School Phone</string>
    <string name="school_email">School Email</string>
    <string name="favorite">Favorite</string>
    <string name="follows">follower schools</string>
    <string name="retry">Retry</string>
    <string name="search_by_map">Search By Map</string>
    <string name="city_name">City name</string>
    <string name="school_type">School type</string>
    <string name="filter">Filter</string>
    <string name="clear_all">Clear all</string>
    <string name="educational_level">Educational Level</string>
    <string name="curriculum_type">Curriculum type</string>
    <string name="type_school">Type School</string>
    <string name="school_evaluation">School evaluation</string>
    <string name="school_value">School Value</string>
    <string name="school_fees">School Fees</string>
    <string name="_0">0</string>
    <string name="_500000">500000</string>
    <string name="apply">Apply</string>
    <string name="recommend_it">Recommend</string>
    <string name="evaluation">Evaluation</string>
    <string name="follow">Follow</string>
    <string name="join_discount">Join discount</string>
    <string name="contact_info">Contact Info</string>
    <string name="create_new_password">Create new Password</string>
    <string name="you_new_password_must_be_different_from_previous_used_passwords">You new password must be different from previous used passwords.</string>
    <string name="reset_passwordBtn">Reset Password</string>
    <string name="password">Password</string>
    <string name="confirm_email_address">Confirm Email Address</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_pass_msg">Enter the email associated with your account and we\'ll send an email with instructions to reset your password</string>
    <string name="send_instructions">Send instructions</string>
    <string name="check_your_mail">Email has been sent!</string>
    <string name="checkLabel_msg">Please check your inbox and click in the received link to reset a password</string>
    <string name="didn_t_receive_the_link_resend">Didn\'t receive the link? {Resend}</string>
    <string name="book_now">Book Now</string>
    <string name="_tuition_fees">Tuition fees</string>
    <string name="contact_times">Contact supervisors</string>
    <string name="awards_school">Awards school</string>
    <string name="service_statistics">Service statistics</string>
    <string name="news_school">News school</string>
    <string name="event_school">Events school</string>
    <string name="achievements">Achievements</string>
    <string name="parent_comment">Parent comments</string>
    <string name="job_available">Job available</string>
    <string name="send_inquiry">Send Inquiry</string>
    <string name="send_message">Send Message</string>
    <string name="type_message">Type Message</string>
    <string name="replay_method">Replay Method</string>
    <string name="best_time_to_call_you">Best Time To Call You</string>
    <string name="write_message_to_school">Write Message To School</string>
    <string name="student_numbers">Student Numbers</string>
    <string name="student_grades">Student Grades</string>
    <string name="address">Address</string>
    <string name="parent_data">Parent data</string>
    <string name="_clear_all">Clear All</string>
    <string name="_done">Done</string>
    <string name="select_grade">Select grade</string>
    <string name="_cancel">Cancel</string>
    <string name="booking_school">Book School</string>
    <string name="adding_school">Adding School</string>
    <string name="success_booking">Successful Booking</string>
    <string name="success_add_school">Successful adding school</string>
    <string name="apply_j">Apply Job</string>
    <string name="job_applying">Successful job apply</string>
    <string name="join_discountLabel">Join Discount</string>
    <string name="send">Send</string>
    <string name="number_of_children">Number of children</string>
    <string name="join_successful">Join Discount Group successfully</string>
    <string name="add_inquiry_label">Send Inquiry</string>
    <string name="inquiry_successfully">Send Inquiry successfully</string>
    <string name="tuition_fees">Tuition Fees</string>
    <string name="info">Info</string>
    <string name="_info_fees">This school not has any tuition fees</string>
    <string name="write_comment">Write Comment</string>
    <string name="send_comment">Send comment</string>
    <string name="successful_review">Successful review</string>
    <string name="loading_data">loading data</string>
    <string name="parent_reviews">Parents reviews</string>
    <string name="notifications">Notifications</string>
    <string name="name_user">Name User</string>
    <string name="admin00_gmail_com">admin00@gmail.com</string>
    <string name="label">Loading…</string>
    <string name="facebook_app_id">1004686346958661</string>
    <string name="fb_login_protocol_scheme">fb1004686346958661</string>
    <string name="details_desc_shimmer">School Good For student because give yours free to play football and study</string>
    <string name="type_shool_shimmer_details">School type : International</string>
    <string name="school_awards">School awards</string>
    <string name="news">News</string>
    <string name="events">Events</string>
    <string name="school_details">School Details</string>
    <string name="news_details">News details</string>
    <string name="events_details">Events details</string>
    <string name="events_no_msg">There are no events for this school</string>
    <string name="news_no_msg">There are no news for this school</string>
    <string name="achievement_no_msg">There are no achievement for this school</string>
    <string name="search_no_msg">No result found</string>
    <string name="awards_no_msg">There are no awards for this school</string>
    <string name="comment_no_msg">There are no parental comments for this school</string>
    <string name="supervisors_no_msg">There are no contact times at the moment</string>
    <string name="notification_no_msg">There are no notifications for this school</string>
    <string name="tuition_no_msg">Tuition Fees have not yet been determined</string>
    <string name="favorite_no_msg">You did not choose your favorite schools</string>
    <string name="follow_no_msg">You did not follow any school</string>
    <string name="job_no_msg">There are no jobs in this school</string>
    <string name="orders_no_msg">You have not booked any school</string>
    <string name="jobs">Jobs</string>
    <string name="order">Orders</string>
    <string name="apply_job">Apply Job</string>
    <string name="job_apply">Job Apply</string>
    <string name="please_choose_file">Please choose your file in on the following [DOC,DOCX,PDF] and then click Upload and wait a while</string>
    <string name="choose_file">Choose File</string>
    <string name="no_internet">No Connection Internet</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string-array name="schoolType">
        <item>Males</item>
        <item>Females</item>
        <item>Males and Females</item>
    </string-array>
    <string name="api_key">AIzaSyBwdy8t1oR8OlYZSPMOUUAy2AmQZ6MLE-4</string>
    <string name="permission_title">Permission Location!</string>
    <string name="permission_msg">Please allow location</string>
    <string name="permission_take">Take Permission</string>
    <string name="filters">Filters</string>
    <string name="no_result">No Result</string>
    <string name="result_school">School Found</string>
    <string name="online">Internet back online</string>
    <string name="schools_found">Schools Found</string>
    <string name="item_selection">Item Selection</string>
    <string name="add_school">Add School</string>
    <string name="book_school">Booking requests</string>
    <string name="profile_information">Profile Information</string>
    <string name="change_password">Change Password</string>
    <string name="language">Language</string>
    <string name="log_out">Log out</string>
    <string name="value_academic">Academic and educational level</string>
    <string name="value_department">The department communicates with parents and responds to inquiries and complaints</string>
    <string name="value_classrooms">Classrooms and school facilities</string>
    <string name="value_hygiene">The school\'s interest in public safety and hygiene</string>
    <string name="value_activities">The school\'s interest in recreational activities</string>
    <string name="n_saudi_schools_guide">دليل المدارس السعوديه\nSAUDI SCHOOLS GUIDE</string>
    <string name="name_">Name : </string>
    <string name="email_">Email : </string>
    <string name="phone_">Phone : </string>
    <string name="grade_">Grades : </string>
    <string name="shunt_">Shunt : </string>
    <string name="choose_lang">Choose Language App</string>
    <string name="connect_timeout">Connection timeout please try again</string>
    <string name="no_internet_">Please check connection internet</string>
    <string name="server_not_responding">Server not responding</string>
    <string name="parse_error">Error parsing from server</string>
    <string name="something_wrong">Please try Again</string>
    <string name="error400">General error when fulfilling the request would cause an invalid state. Domain validation errors</string>
</resources>