<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="forgetPasswordViewModel"
            type="com.eaapps.schoolsguide.features.forgetPassword.ForgetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_round_clear_24"
            app:tint="@color/black"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/resetLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/rpt_bold"
            android:text="@string/reset_password"
            android:textColor="@color/textColor1"
            android:textSize="@dimen/_22ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back" />

        <TextView
            android:id="@+id/subResetLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/rpt_bold"
            android:text="@string/reset_pass_msg"
            android:textColor="@color/gray_1"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetLabel" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            input_Helper="@{forgetPasswordViewModel.inputEditHelp[`email`]}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:backgroundTint="@color/black"
            android:hint="@string/enter_email"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/black"
            app:boxStrokeErrorColor="@color/red"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="false"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/red"
            app:hintEnabled="true"
            app:hintTextColor="#444444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subResetLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/rpt_bold"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:text="@={forgetPasswordViewModel.email}"
                android:textColor="@color/textColor1"
                tools:text="admin@gmail.com" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_instructionsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/rpt_bold"
            android:minHeight="@dimen/_50sdp"
            android:text="@string/send_instructions"
            android:onClick="@{()->forgetPasswordViewModel.sendInstructionsBtn()}"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            app:backgroundTint="@color/colorApp3"
            app:layout_constraintTop_toBottomOf="@id/emailLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>