<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/schoolFeesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/rpt_bold"
        android:text="@string/school_fees"
        android:textColor="@color/textColor1"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="School Fees" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/sliderFees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:stepSize="5.0"
        app:labelBehavior="gone"
        android:valueFrom="0.0"
        android:valueTo="500000.0"
        app:haloColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/schoolFeesLabel"
        app:thumbColor="@color/black"
        app:tickColorActive="@color/white"
        app:tickVisible="true"
        app:trackColor="@color/black"
        app:trackColorActive="@color/black"
        app:trackHeight="8dp"
        app:values="@array/initial_slider_values" />

    <EditText
        android:id="@+id/fromValue"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/edit_fees_shape"
        android:fontFamily="@font/rpt_bold"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/_0"
         android:textColor="@color/textColor1"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="@id/sliderFees"
        app:layout_constraintTop_toBottomOf="@id/sliderFees"
        tools:ignore="LabelFor"
        tools:text="0" />

    <EditText
        android:id="@+id/toValue"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/edit_fees_shape"
        android:fontFamily="@font/rpt_bold"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/_500000"
        android:textColor="@color/textColor1"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@id/sliderFees"
        app:layout_constraintTop_toBottomOf="@id/sliderFees"
        tools:ignore="LabelFor"
        tools:text="500000" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="#DADADA"
        app:layout_constraintTop_toBottomOf="@id/toValue"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>